--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,9 @@
 [submodule "thirdparty/monodepth2"]
 	path = thirdparty/monodepth2
 	url = https://github.com/nianticlabs/monodepth2.git
+[submodule "thirdparty/mseg-semantic"]
+	path = thirdparty/mseg-semantic
+	url = https://github.com/mseg-dataset/mseg-semantic.git
+[submodule "thirdparty/mseg-api"]
+	path = thirdparty/mseg-api
+	url = https://github.com/mseg-dataset/mseg-api.git
