Filtering use segmentation masks for vo

--- a/config.ini
+++ b/config.ini
@@ -39,8 +39,8 @@ unets=thirdparty/disk/submodules/unets
 [DATASET]
 ; select your dataset (decomment only one of the following lines!) 
 ;type=KITTI_DATASET
-;type=TUM_DATASET
-type=VIDEO_DATASET
+type=TUM_DATASET
+;type=VIDEO_DATASET
 ;type=FOLDER_DATASET
 ;type=LIVE_DATASET
 
@@ -63,9 +63,9 @@ groundtruth_file=auto
 
 [TUM_DATASET]
 type=tum
-base_path=/home/luigi/Work/rgbd_datasets
-name=rgbd_dataset_freiburg1_xyz
-cam_settings=settings/TUM1.yaml
+base_path=./videos
+name=rgbd_dataset_freiburg3_walking_static
+cam_settings=settings/TUM3.yaml
 associations=associations.txt
 groundtruth_file=auto
 
