adding mask slam

--- a/config.ini
+++ b/config.ini
@@ -47,12 +47,12 @@ type=TUM_DATASET
 
 [KITTI_DATASET]
 type=kitti 
-base_path=/home/luigi/Work/rgbd_datasets2/kitti_color/dataset
+base_path=./videos/2011_10_03/
 ;
 ;name=00
 ;cam_settings=settings/KITTI00-02.yaml
 ;
-name=06
+name=02
 cam_settings=settings/KITTI04-12.yaml
 ;
 ; do you have the color images for the kitti dataset? (image2 and image3 folders)
@@ -77,7 +77,7 @@ type=video
 ;cam_settings=settings/KITTI00-02.yaml
 ;name=video.mp4
 ;
-base_path=./videos/kitti06
+base_path=./videos/2011_10_03/2011_10_03_drive_0047_extract/image_02
 cam_settings=settings/KITTI04-12.yaml
 name=video_color.mp4
 ;
@@ -90,10 +90,10 @@ groundtruth_file=groundtruth.txt
 
 [FOLDER_DATASET]
 type=folder 
-base_path=/home/luigi/Work/rgbd_datasets2/kitti/dataset/sequences/00/image_0/
+base_path=./videos/2011_10_03/sequences/02/data/
 ; name is used for specifying a glob pattern, e.g. *png, *jpeg, etc...
 name=*png  
-cam_settings=settings/KITTI00-02.yaml
+cam_settings=settings/KITTI04-12.yaml
 groundtruth_file=groundtruth.txt
 fps=20 
 
