update groundtruth and config.ini scripts

--- a/config.ini
+++ b/config.ini
@@ -38,8 +38,8 @@ unets=thirdparty/disk/submodules/unets
 
 [DATASET]
 ; select your dataset (decomment only one of the following lines!) 
-;type=KITTI_DATASET
-type=TUM_DATASET
+type=KITTI_DATASET
+;type=TUM_DATASET
 ;type=VIDEO_DATASET
 ;type=FOLDER_DATASET
 ;type=LIVE_DATASET
@@ -47,12 +47,12 @@ type=TUM_DATASET
 
 [KITTI_DATASET]
 type=kitti 
-base_path=./videos/2011_10_03/
+base_path=./videos/mini_dataset_slam/
 ;
 ;name=00
 ;cam_settings=settings/KITTI00-02.yaml
 ;
-name=02
+name=04
 cam_settings=settings/KITTI04-12.yaml
 ;
 ; do you have the color images for the kitti dataset? (image2 and image3 folders)
